[package]
name = "exaf-rs"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Extensible archiver format."
repository = "https://github.com/nlfiedler/exaf-rs"
readme = "README.md"
keywords = ["archiver", "compressor"]
license = "MIT"
default-run = "exaf-rs"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
clap = "4.5.4"
chrono = "0.4.37"
libc = "0.2.153"
os_str_bytes = { version = "7.0.0", features = ["conversions"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
thiserror = "1.0.58"
zstd = "0.13.1"

[dev-dependencies]
sha1 = "0.10.6"
tempfile = "3.7.1"
