[package]
name = "exaf-rs"
version = "1.2.0"
edition = "2024"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Extensible archiver format."
repository = "https://github.com/nlfiedler/exaf-rs"
readme = "README.md"
keywords = ["archiver", "compressor"]
license = "MIT"

[[bin]]
name = "exaf"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
clap = "4.5.4"
chrono = "0.4.37"
libc = "0.2.153"
os_str_bytes = { version = "7.0.0", features = ["conversions"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
thiserror = "2.0.12"
zstd = "0.13.1"

[dev-dependencies]
sha1 = "0.10.6"
tempfile = "3.7.1"
