[package]
name = "exaf-rs"
version = "3.1.0"
edition = "2024"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Extensible archiver format."
repository = "https://github.com/nlfiedler/exaf-rs"
readme = "README.md"
keywords = ["archiver", "compressor"]
license = "MIT"

[[bin]]
name = "exaf"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = "4.5.4"
chrono = "0.4.37"
libc = "0.2.153"
os_str_bytes = { version = "7.0.0", features = ["conversions"] }
rand_core = "0.10.0"
scrypt = { version = "0.11.0", optional = true }
thiserror = "2.0.12"
xz2 = { version = "0.1.7", optional = true }
zstd = "0.13.1"

[dev-dependencies]
blake3 = "1.8.4"
tempfile = "3.7.1"

[features]
default = []
# Enable XZ (LZMA2) as an alternative content compression algorithm. Pulls in
# liblzma via the `xz2` crate.
xz = ["dep:xz2"]
# Enable scrypt as an alternative password-based key derivation function.
scrypt = ["dep:scrypt"]

[package.metadata.docs.rs]
all-features = true
